fix :: NPE