@@ -7,13 +7,13 @@ import com.minsta.m.domain.user.service.GetUserDetailService;
 import com.minsta.m.global.annotation.ReadOnlyService;
 import com.minsta.m.global.error.BasicException;
 import com.minsta.m.global.error.ErrorCode;
-import com.minsta.m.global.util.UserUtil;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import lombok.RequiredArgsConstructor;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.minsta.m.domain.feed.entity.feed.QFeed.feed;
 import static com.minsta.m.domain.follow.entity.QFollow.follow;
@@ -23,7 +23,6 @@ import static com.minsta.m.domain.leels.entity.QLeels.leels;
 @RequiredArgsConstructor
 public class GetUserDetailServiceImpl implements GetUserDetailService {
 
-    private final UserUtil userUtil;
     private final UserRepository userRepository;
     private final JPAQueryFactory em;
 
@@ -31,7 +30,7 @@ public class GetUserDetailServiceImpl implements GetUserDetailService {
     public UserDetailResponse execute(Long userId) {
 
         User user = userRepository.findById(userId).orElseThrow(() -> new BasicException(ErrorCode.USER_NOT_FOUND));
-        List<Map<Long, String>> feeds = getFeedsList(user.getUserId());
+        List<?> feeds = getFeedsList(user.getUserId());
 
         return UserDetailResponse.of(
                 user.getUserId(),
@@ -45,8 +44,7 @@ public class GetUserDetailServiceImpl implements GetUserDetailService {
         );
     }
 
-    private List<Map<Long, String>> getFeedsList(Long userId) {
-
+    private List<?> getFeedsList(Long userId) {
         return em
                 .select(feed.feedId, feed.fileUrls)
                 .from(feed)
@@ -54,8 +52,12 @@ public class GetUserDetailServiceImpl implements GetUserDetailService {
                 .orderBy(feed.createdAt.desc())
                 .fetch()
                 .stream()
-                .map(tuple -> Map.of(tuple.get(feed.feedId), tuple.get(feed.fileUrls.get(0))))
-                .collect(Collectors.toList());
+                .map(tuple -> {
+                    Object rawUrls = tuple.get(feed.fileUrls);
+                    List<String> urlList = rawUrls != null ? Arrays.asList(((String) rawUrls).split(",")) : Collections.emptyList();
+                    return Map.of(tuple.get(feed.feedId), urlList.get(0));
+                })
+                .toList();
     }
 
     private List<Map<Long, String>> getLeelsList(Long userId) {
@@ -68,7 +70,7 @@ public class GetUserDetailServiceImpl implements GetUserDetailService {
                 .fetch()
                 .stream()
                 .map(tuple -> Map.of(tuple.get(leels.leelsId), tuple.get(leels.leelsUrl)))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private int getFollower(Long userId) {
